LU-20439 lnet: consolidate existing peer in LNetAddPeer

LNetAddPeer() adds each non-primary NID as its own peer and relies
on background discovery to consolidate it into the primary peer. It
only arms that consolidation, by setting lp_merge_primary_nid and
forcing discovery, when lnet_add_peer_ni() reports a freshly created
peer. If a peer record for the non-primary NID already exists, for
example created by an earlier discovery or by traffic before the
filesystem is mounted, lnet_add_peer_ni() returns -EEXIST, the
consolidation is skipped, and the configured multi-rail peer never
forms. With lock_prim_nid enabled the import is left pinned to a
primary NID that may be unreachable while the reachable NIDs sit in
a separate peer.

Treat such a pre-existing peer the same as a freshly created one:
stamp lp_merge_primary_nid, clear LNET_PEER_NIDS_UPTODATE, and set
LNET_PEER_FORCE_PING so a fresh discovery runs and processes the
merge even when the peer is already up to date. The forced ping is
required because lnet_discover_peer_locked() will not re-ping a peer
that is already up to date.

Only absorb a peer that carries neither the configured nor the
lock-primary state. A peer that Lustre configured or locked
describes a deliberate, possibly different, node and must be
preserved. An -EALREADY return means the NID already belongs to such
a locked peer, so leave that arrangement alone. The merge is gated
on lock_prim_nid because without a locked primary ordinary discovery
already reconciles the peers.

Assisted-by: Claude:claude-opus-4.8

Fixes: ae6d373bc6 ("LU-17379 lnet: parallelize peer discovery via LNetAddPeer")
Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: Chris Horn <chorn@ddn.com>
Change-Id: I9c613b674bb0ef24b7459008b5e6f6118a573d4f
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66980
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>